# dh-contacts

./: pyproject.toml
.github/workflows/: lint.yml
dh_contacts/: routes.py  services.py
dh_contacts/consts/: __init__.py  types.py
dh_contacts/exceptions/: __init__.py  common.py  validators.py
dh_contacts/initializers/: __init__.py  events.py
dh_contacts/models/: __init__.py  contacts.py  verify_token.py
dh_contacts/schemas/: __init__.py  confirm.py  contacts.py  register.py
dh_contacts/validators/: __init__.py  email.py
docs/: conf.py
